--- a/week_2/task_4/style.css
+++ b/week_2/task_4/style.css
@@ -5,6 +5,7 @@
   font-family: sans-serif;
 }
 
+
 .nav-bar{
     display: flex;
     justify-content: space-around;
@@ -19,12 +20,17 @@
 
 }
 
-.card-wrapper{
+.card-wrapper {
   display: flex;
   justify-content: center;
   
+  
 }
 
-.card{
+.card-wrapper :hover {
+  background-color: blue;
+  color: white;
+  
+  
   
 }
